# bikkuri

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  MANIFEST.in  Makefile  README.md  pyproject.toml  tests.py
.github/workflows/: release.yml  tests.yml
bikkuri/: __init__.py  ngram.py  tokenizers.py
pyo3/: Cargo.toml
pyo3/src/: lib.rs
python/tests/: test_ngramfrequencysurprisal.py  test_ngramsurprisal.py
rust/: Cargo.toml
rust/src/: errors.rs  lib.rs  ngram.rs
rust/tests/: test_ngramfrequencysurprisal.rs  test_ngramsurprisal.rs
src/: lib.rs  ngram.rs  python.rs
tests/: __init__.py  test_ngramsurprisal.py  test_ngramsurprisal.rs  test_tokenizers.py
