[workspace]

members = [
    "rust",
    "pyo3"
]

resolver = "3"

[workspace.package]
version = "0.2.0-rc4"
authors = ["J. Nathanael Philipp (jnphilipp) <jnathanael@philipp.land>"]
description = "Calculate the surprisal of words in texts."
license = "GPL-3.0-or-later"
repository = "https://github.com/jnphilipp/bikkuri"
readme = "README.md"
keywords = ["surprisal"]
edition = "2024"
