[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[project]
name = "bikkuri"
version = "0.2.0-rc1"
authors = [
    {name = "J. Nathanael Philipp", email = "jnathanael@philipp.land"}
]
description="Calculate the surprisal of words in texts."
readme = "README.md"
license = {text = "GPLv3+"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["surprisal"]


[project.urls]
"Homepage" = "https://github.com/jnphilipp/bikkuri"
"Bug Tracker" = "http://github.com/jnphilipp/bikkuri/issues"


[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module", "pyo3/experimental-inspect"]
