[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"


[project]
name = "bikkuri"
version = "0.2.0-rc25"
authors = [
    {name = "J. Nathanael Philipp", email = "jnathanael@philipp.land"}
]
description="Calculate the surprisal of words in texts."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["surprisal"]


[project.urls]
"Homepage" = "https://github.com/jnphilipp/bikkuri"
"Bug Tracker" = "http://github.com/jnphilipp/bikkuri/issues"

[tool.setuptools.packages]
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
target = "bikkuri"
path = "pyo3/Cargo.toml"
binding = "PyO3"
