[package]
name = "bikkuripyo3"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
name = "bikkuri"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bikkuri = { path = "../rust" }
pyo3-built = "*"

[dependencies.pyo3]
version = "~0.28.3"
features = ["extension-module", "experimental-inspect"]

[build-dependencies]
built = { version = "*", features = ["git2", "chrono", "semver"] }
