[package]
name = "bikkuri"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
include = [
    "**/*.rs",
    "README.md",
    "LICENSE",
]

[lib]
name = "bikkuri"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
json = "0.12"

[dev-dependencies]
tempdir = "0.3"
